--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
         font-size: 14px;
         -webkit-font-smoothing: antialiased;
         color: #6c7279;
-        background-color: #fff;
+        /* background-color: #fff; */
+        background-color: rgba(238, 238, 211, 0.9)
     }
     
     *,
@@ -34,28 +35,41 @@
     /*  container */
     
     .container {
-        width: 100px;
-        min-width: 1200px;
+        width: 100%;
+        max-width: 1200px;
         margin: 0 auto;
         padding: 0 15px;
     }
     /* Header  =================================================================*/
     
     .header {
-        position: absolute;
         width: 100%;
         height: 100px;
+        position: absolute;
         top: 0;
         left: 0;
         z-index: 1000;
     }
     
+    .header.fixed {
+        height: auto;
+        position: fixed;
+        background-color: #fffedf;
+        opacity: 90%;
+    }
+    
+    .header.fixed .header__inner {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        border-bottom: 0;
+    }
+    
     .header__inner {
         display: flex;
         justify-content: space-between;
-        border-bottom: 1px solid #4a4d63;
-        padding: 35px 0;
         align-items: center;
+        padding: 35px 0;
+        border-bottom: 1px solid #515369;
     }
     /* Nav ===================================================================== */
     
@@ -212,6 +226,7 @@
     }
     
     .works__photo {
+        min-width: 100%;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -437,4 +452,166 @@
     
     .copyright__text span {
         color: #fff;
+    }
+    /* burger ===================================================================== */
+    
+    .burger {
+        display: none;
+        padding: 15px 0;
+        background: none;
+        border: none;
+        cursor: pointer;
+    }
+    
+    .burger__item {
+        display: block;
+        width: 30px;
+        height: 3px;
+        background-color: black;
+        font-size: 0;
+        color: transparent;
+        position: relative;
+    }
+    
+    .burger__item:before,
+    .burger__item:after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: black;
+        position: absolute;
+        left: 0;
+        z-index: 1;
+    }
+    
+    .burger__item:before {
+        top: -8px;
+    }
+    
+    .burger__item:after {
+        bottom: -8px;
+    }
+    /* media ===================================================================== */
+    
+    @media ( max-width: 1300px) {
+        /* works ==========*/
+        .works__item {
+            width: 50%;
+        }
+    }
+    
+    @media ( max-width: 991px) {
+        /* nav ==========*/
+        .nav {
+            display: none;
+        }
+        /* burger ==========*/
+        .burger__item {
+            display: block;
+        }
+        /* intro ==========*/
+        .intro__title {
+            font-size: 40px;
+        }
+        /* burger ==========*/
+        .burger {
+            display: block;
+        }
+        /* btn ==========*/
+        .btn {}
+        /* features ==========*/
+        .features__item {
+            width: 50%;
+        }
+        /* team ==========*/
+        .team__item {
+            width: 50%;
+            text-align: center;
+        }
+        .team__photo {
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .team__social {
+            justify-content: center;
+        }
+        /* reviews ==========*/
+        .reviews__photo {
+            width: 100%;
+            margin: 15px 0 40px;
+            overflow: hidden;
+        }
+        .reviews__content {
+            width: 100%;
+            padding: 0 15px 40px 15px;
+        }
+    }
+    
+    @media ( max-width: 767px) {
+        /* intro ==========*/
+        .intro {
+            height: auto;
+            padding-top: 130px;
+            padding-bottom: 30px;
+        }
+        .intro__title {
+            font-size: 30px;
+        }
+        .intro__subtitle {
+            font-size: 15px;
+            margin-bottom: 40px;
+        }
+        /* features ==========*/
+        .features {
+            margin: 40px 0;
+        }
+        .features__item {
+            width: 100%;
+            padding-left: 0;
+            padding-right: 0;
+        }
+        /* works ==========*/
+        .works__item {
+            margin-bottom: 5px;
+            width: 100%;
+            height: 300px;
+        }
+        /* team ==========*/
+        .team {
+            margin: 35px 0;
+        }
+        .team__item {
+            width: 100%;
+            text-align: center;
+        }
+        /* reviews ==========*/
+        .reviews__photo {
+            width: 100%;
+            height: 250px;
+        }
+        .reviews_text {
+            font-size: 25px;
+        }
+        /* download ==========*/
+        .download {
+            margin: 50px 0;
+        }
+        .download__title {
+            font-size: 20px;
+        }
+        /* footer ==========*/
+        .footer__block {
+            width: 100%;
+            margin-top: 20px;
+        }
+        .footer__inner {
+            padding: 0;
+        }
+    }
+    
+    @media ( max-width: 414px) {
+        /* reviews ==========*/
+        .reviews__img {
+            right: -120px;
+        }
     }
